Continuação do projeto 1

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Água por Idade</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@200;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Memory Game</title>
 </head>
-<body>
 
+<body>
+  <form class="login-form">
+    <div class="login_header">
+      <img src="../imagens/brain.gif" alt="brain icon">
+      <h1>Memory Game</h1>
+    </div>
+
+    <input type="text" placeholder="Name" class="login_input">
+    <button type="submit" class="login_button">Play</button>
+    </form>
+
+ 
 </body>
 </html>
