--- a/pages/index.html
+++ b/pages/index.html
@@ -12,12 +12,12 @@
 <body>
   <form class="login-form">
     <div class="login_header">
-      <img src="../imagens/brain.gif" alt="brain icon">
+      <img src="../imagens/source.webp" alt="brain icon">
       <h1>Memory Game</h1>
     </div>
 
     <input type="text" placeholder="Name" class="login_input">
-    <button type="submit" class="login_button">Play</button>
+    <button type="submit" class="login_button" disabled>Play</button>
     </form>
 
  
