continuação do jogo e download das imagens

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,13 +6,18 @@
 
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/login.css">
+   
+    <script defer src="../js/login.js"></script> </script>
+
     <title>Memory Game</title>
 </head>
 
 <body>
   <form class="login-form">
+
     <div class="login_header">
       <img src="../imagens/source.webp" alt="brain icon">
+      
       <h1>Memory Game</h1>
     </div>
 
