continuação do jogo

--- a/pages/game.html
+++ b/pages/game.html
@@ -8,17 +8,12 @@
     <link rel="stylesheet" href="../css/game.css">
     
     <script defer src="../js/game.js"></script>
+    
     <title>Memory Game</title>
 </head>
-
 <body>
 
-    <div class="grid">
-        <div class="card">
-            <div class="face front"></div>
-            <div class="face back"></div>
-    </div>
+    <div class="grid"></div>
 
-    </div>
 </body>
 </html>
