continuação do jogo

--- a/pages/game.html
+++ b/pages/game.html
@@ -11,9 +11,13 @@
     
     <title>Memory Game</title>
 </head>
+
 <body>
 
-    <div class="grid"></div>
+    <div class="grid">
+        
+    </div>
 
+    </div>
 </body>
 </html>
