--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
   <form class="login-form">
 
     <div class="login_header">
-      <img src="../imagens/source.webp" alt="brain icon">
+      <img src="../imagens/simpsons.gif" alt="brain icon">
       
       <h1>Memory Game</h1>
     </div>
