correção e finalização do jogo da memoria

--- a/pages/game.html
+++ b/pages/game.html
@@ -14,10 +14,14 @@
 
 <body>
 
-    <div class="grid">
-        
-    </div>
+  <main>
+    <header>
+      <span class="player"></span>
+      <span>Tempo: <span class="timer">00</span></span>
+    </header>
 
-    </div>
+    <div class="grid"></div>
+  </main>
+
 </body>
 </html>
