--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 
 
 </body>
-<footer class="copyright"><p></p> &copy; Copyrigth Elisa Morais - 2022</p></footer>
+  <div>
+    <footer class="copyright"><p></p> &copy; Copyrigth Elisa Morais - 2022</p></footer>
+  </div>
 </html>
